添加了，目前量测，点一下会自动复制到已量测中这个功能

--- a/TDRv/Form1.resx
+++ b/TDRv/Form1.resx
@@ -129,6 +129,60 @@
   <metadata name="mLayer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="mFlag.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="mStep.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="mDescription.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="mLayer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn10.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn11.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn12.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn13.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn14.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="cLayer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -174,46 +228,37 @@
   <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>127, 17</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hResult.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hDescription.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hLayer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hSn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hAverage.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hZminmum.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hZmaxmum.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hTime.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn10.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hRemark.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dataGridViewTextBoxColumn11.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn12.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn13.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn14.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="hSD.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="hResult.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -257,37 +302,37 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKHSURBVFhH7Ze/axRBFMcPC0ETb3fmDKJYiFio2FvYWEkK
-        EZv8BRaCBEywsUtldWjI7c6sMQYrm8NCRAVJITYqonDo6e3NOwkJpLKwEUOwON/beXvuya25zd2tTT4w
-        7M53Z+f73vxit7BLnjjzq64TNI5xNV9kYE5LHdalB6ss5UfHXEMbS5Xl4TK+YCZcZa5FRcOlo7fX95Ge
-        i7nUpuzM1zbZJFmejNScssNsX5CB68MK3t/HYOaouNq8Y+PRmW+XnQ0G2kI337M0HJLmQsMNlnuCbXAa
-        oD3hwwmWBqM7czPDcirxKGCZYmkwpDJXbIcYBAbDciqdAAIzy9LOsJnbjLHDar9BSB8eUtuSCi+zlJ3k
-        sAsFCzgKF8Y0/NguiPHF8KBUUJO68f1QuTbGcjaS5tJrfqKro6Bhzf89ElK37tnnpsxSNrrMaS5V85TQ
-        4Ye4HrVJCSKeezonWMpOfMjEZoSj1447HryJdGWWSPs7iNgcgwWhW2eiF7OCnZSjTlTzJUsdSt7aEZzb
-        V9Y0YZ68VuCbqITn+JVs0IKhhUMdYbbnWe6iuLQuXd+sdEwxc+GBsnX4Je7CJDfNDm2ZqCMVvmapJ4cX
-        N/Zju6fU1vHhM60RnJbrrv56kZvsDMxm1mbyZ+5TmWvvcRU8ovZ4LD9gdTCws6koADxEWEpFBK2rNtg+
-        A+6HUiU8SR3iLnjLUk+ENjeHbh4Tb7W0+cTg7ozMnKDtFxtE9z5MCx8m0WxG+uZ59MyHrZGY40p+RgZF
-        Xf+ZDCRZ8CPjsfSbZ/mV4YErepkMiho2CtX6XtLoLKBMoxLA9Mi+7YVq3bIZhvUD3pcSy/lBPw2Y5cf/
-        9vdCxvT7xNVdcqBQ+A2KzQEDDO8mfQAAAABJRU5ErkJggg==
+        EZv8BRaCBEywsUtldWjI7c6sMYqVzWEhooKkEBsVUQx6envzTkICqSxsRBGL872dt+ee3Jrb3O3a5APD
+        7nx3dr7vzS92S9sUiTO/6jpB8xBXi0UG5rjUYUN6sMpScXTNNXSw1FkeLeMLZsJV5lJUNJw7eH19F+mF
+        mEttqs78ux9skiwPczWn7DDbp2Tg+rCM97cxmDkqrjav2Tg/882ys8FAR+jWG5ZGQ9JcaLjCcl+wDU4D
+        dCZ8OMLScPRmbmZYTiUeBSxTLA2HVOaC7RCDwGBYTqUbQGBmWdoaNnObMXZYHzQI6cM9altR4XmWspMc
+        dqFgAUfhzJiGb5sFMb4Y7pUKVqRuft1XXRljORtJc+m1PtDVUdC05v8eCanbt+xzU2UpGz3mNJeqdUzo
+        8G1cj9qkBBHPPZ0TLGUnPmRiM8LRa4cdD15GujJLpP0dRGyOwYLQ7RPRi1nBTqpRJ6r1jKUuFW/tAM7t
+        c2uaME9ea/BF1MJT/Eo2aMHQwqGOMNvTLPdQXlqXrm+Wu6aYufBA2Tr8Ejdhkptmh7ZM1JEKX7DUl/2L
+        G7ux3SNq6/jwkdYITstlV38+y022BmYzazP5M/epzHV2uAruU3s8lu+yOhzY2VQUAB4iLKUigvZFG+yA
+        AQ9CpRYepQ5xF7xiqS9Cm6sjN4+Jt1rafGJwN3IzJ2j7xQbRvQ/TwodJNJuRvnkSPfPhZy7muJIfk0FZ
+        N74nA0kW/Mh4IP3WSX5ldOCKvkMGZQ0bpXpjJ2l0FlCmUQlgOrdve6Ha12yGYWOP96nCcnHQTwNm+f6/
+        /b2QMf0+cXWbAiiVfgN9/gECrWQe+gAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="tsb_DevPOptSet.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM+SURBVFhH3VY9aBRBFE4nmp+72VODYKWCwcbS1s5OBEmn
-        qIUiiIWN2NkbJSS3M5coIkQQuUJQREijnVWEIAFvZxIj/iAKYqGiECG+b/bN3t7O7v3EU8QPHtx975t5
-        b3bevJmBXiBk9CRQZr2dQcPy/iMvYJ6xvP/oFOD/SIAmqIswul+qmoNMJdhoAkEYnQyqZjWQ+g5T+ShL
-        fcxNAhNVI8EHNb0vUPphUQAH5x+U+msgzfltodkThPqR42GIwfIMpvQmoRrPYqG+HKgXn/FbSPMxPQF8
-        PMJDPC6tjU0o88P5EAOxeEgTQulLdoBsPC2p52L7jZVRGjTRnEhPsLQtSiraRZ/6uhtHwW/jCw5X31aE
-        jBeIWCyPMTKjdzdXqo8y/VtADWXriBI7ZROgWIjJNK2e9tply9Qfg5D6no3F9WUztSuXeq0y3RizZAcI
-        tXyGOt4cKntYmjc0vo49ZndblGvRftKvIab9QjhyNgEUyZQeYV0hhIoWYn2eNZZYVojRicVBG4v0iG3P
-        vZuAJn9M23CItR7SWrJxFGpcrGY8xddZ7oH6wQHyJ8c50VaUOUfV+96SV5Z+5n1O0hx3A5ny4PzQMpXA
-        rRo2rLBt0Ql2xRCzKyVqHjMQ5N1oxNvVl5U5zJQH+DiI9xXcTSrkcnVb+GGI6Va4gkwqNAUutvWtM692
-        MOUBPmigZSqBO2nZo9mCdgnYXk4+7DlTHrge1qFlKkHHBDptgT12mJwKjikP8PH4OaYSuC0gkzuvvd7M
-        dIxuihBnnyfoWITQMpWA2u+08weh+YSuaB1EdH0M0z0ABYc9h6WKD3MssNxDRTaOUOBFpyWr99yIMCg1
-        QYtRIvMsK0RpcrXc0ohc4fXSirkn1FHtI8q8o98P8rYtD5XZ1bGhq41viJkUpKvQv3MZxcXcctLaXcfI
-        svDo9AhXK951DGQfJBX1cm+5Zm7GScGW73Z9W0p9EWNs86rpC0wjgXmbQPZBYpF5kpUmF783g6et9ycZ
-        FiVCcxq/C59kAB6M2YF4TlH/PrtFmS+OZ7kH59/Yo5RBhXgr++kc3CT810ORP3mW51xSPWGjCfQN/0wC
-        nYzl/UfqRis0aFjeBQYGfgHh7pj1M/mXhQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM+SURBVFhH3VY7aFRBFE0nms/uvDUGwUoFg42lrZ2dCJJO
+        UQtFEAsbsbO0WCUk+2Y2UUSIILKFoIiQRjuriEEC7ptJXPGDKIiFikKEeM+8O2/fvs/+XEU8cGH33DNz
+        77y5c2eGeoGQwWNPmY12Bg3LB4+sgFnG8sGjU4D/IwGaoCb84F6hYg4wFaHfBDw/OOFVTMOT+jZT2ShK
+        fdRNAhMVI8F7Vb3XU/pBXgAH5x+W+qsnzblx3+z2fP3Q8TDEYHkCM3qTUPWnoVBf8tSLz/gtpPkYnwA+
+        HpFCOC6uDU0o88P5EAOxeEgTQumLdoCsPymo52Lb9bUJGlRuTqTLLG2Lggp20qe+5sZR8Fv4gqOVtyUh
+        wwUiFstDjM3pXc2V6iNM/xZQQ8k6osRO2gQoFmIyTaunvXbZMvXHIKS+a2NxfdlM7cqlXi/N1ict2QFC
+        rZ6mjreAyh6V5g2Nr2GP2d0WxWqwj/TriGm/EI6cTQBFMqPHWJcLoYKlUJ9l9RWW5WKivDxsY5Eese25
+        dxPQ5I9oGw6yNoW4lmwKhRoWq5mK8TWWp0D9YD/5o+McaUvKnKXqfW/Jyys/sz4naY65gUyl4PzQMhXB
+        rRo2qrBtwXF2hRDzawVqHnMQZN1oxNvVF5U5xFQK8HGQ1FdwN6mQq5Vx/8MI061wBRlVaAxcbBtb515t
+        ZyoF+KCBlqkI7qQlj2YL2iVgezn5sOdMpcD1sAEtUxE6JtBpC+yxw+RUcEylAB+PX2AqgtsCMrnj6uvN
+        TIfopghx9nmCjkUILVMRqP3OOr/nm0/oitZBRNfHMN4DUHDYc1is+DDHEstTKMn6YQq87LRktZ4bEQbF
+        JmgxSmSRZbkoTDeKLY3IFV4vrZh7Qg3VPqbMO/p9P2vbslCab0yOXKl/Q8yoIF2F/p3LKCzmlpPW7jpG
+        lrlHp0e4Wkldx0DyQVJSL/cUq+ZGmBRs9U7Xt6XUFzDGNq+qPs80Eli0CSQfJBaJJ1lh+tn3ZvC49f4k
+        w6KEb07hd+6TDMCDMTkQzynq32e2KPPF8SxPwfn7e5QyqBBvJj+dg5uE/6aQ54+e5RmXVE/oN4GB4Z9J
+        oJOxfPCI3Wi5Bg3Lu8DQ0C+tC5juAAqDRwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="tsb_DevParamSet.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
